media queries using min & max and smaller font on mobile. button test color darker for accessibililty. reverted to prior code in forms to fix search button in widget.

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -29,7 +29,7 @@
 $white: #FFFFFF;
 $paper: #F4F4F4;
 $light-gray: #D3D3D3;   // default border color
-$silver: #C0C0C0;      
+$silver: #C0C0C0;
 $dark-gray: #A9A9A9;    // default hover color
 $gray: #808080;
 $charcoal: #373737;
@@ -435,17 +435,13 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
     background: $white;
-    border: 1px solid $light-gray;
-    @include x-border-radius(10px);    
+    border: 1px solid $silver;
+    @include x-border-radius(10px);
     color: $black;
-    font-size: $main-text-size;
-}
-
-// full-width buttons only (not navbar buttons)
-input[type="reset"],
-input[type="submit"] {
-    height: 50px;  
-    width: 100%;   
+    font-size: 12px;
+    font-size: 0.75rem;
+    line-height: 1;
+    padding: .6em 1em .4em;
 }
 
 button:hover,
@@ -508,6 +504,20 @@ form label {
     display: block; // contact form labels full-width of panel    
 }
 
+input[type="submit"],
+button[type="submit"] {
+    background: $white;
+    color: $black;
+    font-size: $main-text-size;
+    height: 50px;
+    width: 100%;
+}
+
+input[type="submit"]:hover,
+button[type="submit"]:hover {
+    border-color: $dark-gray;
+}
+
 .form-submit,
 .send-button {
     @include x-border-radius(10px);
@@ -556,6 +566,20 @@ form label {
 
 .comment-form-author {
     margin-top: .1em;
+}
+
+input[type="button" i],
+input[type="submit" i],
+input[type="reset" i],
+input[type="file" i]::-webkit-file-upload-button,
+button {
+    border-radius: 10px;
+    border-width: 1px;
+}
+
+// navbar search icon on click
+button.btn.btn-default.nav-search {
+    background-color: white;
 }
 
 
@@ -1477,7 +1501,7 @@ object {
 }
 
 .main-image {
-    margin-bottom: 30px;
+    margin: 0 auto 30px;
 }
 
 img.post {
@@ -1575,23 +1599,32 @@ section.main-content {
 # Media Queries
 --------------------------------------------------------------*/
 
-// Small devices (landscape phones)
-@media screen and (min-width: 576px) {
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575px) {
+    .entry-title a {
+        font-size: 30px;
+    }
 }
 
-// Medium devices (tablets) 
-@media (min-width: 768px) {
-    .container {
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 767px) {
+    .entry-title a {
+        font-size: 32px;
     }
-    .navbar-nav>li>a {}
-    .navbar .navbar-nav {}
-    .navbar .navbar-collapse {}
+}
+
+// Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) and (max-width: 991px) { 
+@media (min-width: 768px) { 
+    .entry-title a {
+        font-size: 34px;
+    }
     .navbar>.container-fluid .navbar-brand {
         margin: auto 10%;
     }
 }
 
-// Large devices (desktops) 
+// Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
     p.site-description {
        display: inline;
